--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-###your api keys###
-
+VITE_GEMINI_API_KEY=***************************************************
+VITE_SUPABASE_URL=****************************************************************
+VITE_SUPABASE_ANON_KEY=****************************************************************
